--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "task_manager",
+  "description": "Tasks progress helper.",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Max-0n/task-manager.git"
+  },
+  "engines": {
+    "node": "15.3.0"
+  },
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "start": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -24,6 +32,8 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "node-sass": "^4.12.0",
+    "pug": "^3.0.0",
+    "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.2"
   }
 }
