--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git@github.com:Max-0n/task-manager.git"
+    "url": "git@github.com:Max-0n/task_manager.git"
   },
   "engines": {
     "node": "15.3.0"
